# EC

web-serve/: Cargo.toml  static_gen.sh
web-serve/src/: main.rs
web-serve/static/: index.html  wasm.js  wasm_bg.wasm
web-serve/static/css/: main.css
web-site/: Cargo.toml  build.sh  test.sh
web-site/src/: lib.rs
